--- a/register.html
+++ b/register.html
@@ -9,24 +9,26 @@
     <title>4/2 Games</title>
 </head>
 <body>
-    <div class="left-side">
-        <div class="content-left">
-            <img src="img/trancendence_logo_stranger.jpg" alt="">
+    <div class="index-body">
+        <div class="left-side">
+            <div class="content-left">
+                <img src="img/trancendence_logo_stranger.jpg" alt="">
+            </div>
         </div>
-    </div>
-    <div class="right-side">
-        <div class="content">
-            <div class="input-container">
-                <h1 style="color: #FDB827;">hello,</h1>
-                <p style="color: #000">create a new account</p>
-                <form id="registrationForm" class="input-form-container">
-                    <input type="text" id="username" placeholder="Username" required>
-                    <input type="email" id="email" placeholder="Email Address" required>
-                    <input type="password" id="password" placeholder="Password" required>
-                    <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
-                    <button type="button" onclick="registerUser()">sign in</button>
-                </form>
-                <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Hesabınız var mı? <a style="color: #FDB827;"  href="" onclick="loadPage('index.html'); return false;">LOG IN</a></p>
+        <div class="right-side">
+            <div class="content">
+                <div class="input-container">
+                    <h1 style="color: #FDB827;">hello,</h1>
+                    <p style="color: #000">create a new account</p>
+                    <form id="registrationForm" class="input-form-container">
+                        <input type="text" id="username" placeholder="Username" required>
+                        <input type="email" id="email" placeholder="Email Address" required>
+                        <input type="password" id="password" placeholder="Password" required>
+                        <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+                        <button type="button" onclick="registerUser()">sign in</button>
+                    </form>
+                    <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Hesabınız var mı? <a style="color: #FDB827;"  href="" onclick="loadPage('index.html'); return false;">LOG IN</a></p>
+                </div>
             </div>
         </div>
     </div>
