--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
     <title>4/2 Games</title>
 </head>
 <body>
-    <div class="left-side">
-        <div class="content-left">
-            <img src="img/trancendence_logo_back.jpg" alt="">
+    <div class="index-body">
+        <div class="left-side">
+            <div class="content-left">
+                <img src="img/trancendence_logo_back.jpg" alt="">
+            </div>
         </div>
-    </div>
-    <div class="right-side">
-        <div class="content">
-            <div class="input-container">
-                <h1 style="color: #FDB827;">hello friend,</h1>
-                <p style="color: #000">login to your account</p>
-                <form id="loginUser" class="input-form-container"></form>
-                <input type="text" id="username" placeholder="Username">
-                <input type="password" id="password" placeholder="Password"> 
-                <button type="button" onclick="loginUser()">Login</button>
-                </form>
-                <p style="color: #FDB827;"> or </p>
-                <a href="img/42-account-logo.jpg" target="_blank">
-                    <img src="img/42-account-logo.jpg" alt="42-logo">
-                </a>
-                <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);"> Create a new user?
-                    <a style="color: #FDB827;" href="" onclick="loadPage('register.html'); return false;"> LOG IN</a>
-                </p>
+        <div class="right-side">
+            <div class="content">
+                <div class="input-container">
+                    <h1 style="color: #FDB827;">hello friend,</h1>
+                    <p style="color: #000">login to your account</p>
+                    <form id="loginUser" class="input-form-container"></form>
+                    <input type="text" id="username" placeholder="Username">
+                    <input type="password" id="password" placeholder="Password"> 
+                    <button type="button" onclick="loginUser()">Login</button>
+                    </form>
+                    <p style="color: #FDB827;"> or </p>
+                    <a href="img/42-account-logo.jpg" target="_blank">
+                        <img src="img/42-account-logo.jpg" alt="42-logo">
+                    </a>
+                    <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);"> Create a new user?
+                        <a style="color: #FDB827;" href="" onclick="loadPage('register.html'); return false;"> LOG IN</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
