all page finished

--- a/being-matchwith-nick.html
+++ b/being-matchwith-nick.html
@@ -24,11 +24,14 @@
     <div class="games-page">
         <div class="game-template">
             <div class="board-template">
-                <h2 style="color: #5D1D88; font-size: 40px;"> choose game !</h2>
-                <div class="board">
-                    <a href=""><img src="img/pong-img.jpg" alt="Pong Logo"></a>
-                    <a href="" class="question-mark"><img src="img/Vector.png" alt="question-mark"></a>
-                    <a href="" class="pong-logo-link"><img src="img/yazi-tura.jpg" alt="Pong Logo"></a>
+                <h2 style="color: #5D1D88; font-size: 25px; margin-top: 6%;"> woww, that’ll be crazy TOURNAMENT!</h2>
+                <div class="board-column">
+                    <a href=""> <img src="img/sand-watch.jpg"></a>
+                    <a href="" class="question-mark"><img src="img/eightsome.jpg" alt="question-mark"></a>
+                </div>
+                <div class="nick-create">
+                    <input type="text" id="nickname" placeholder=" Friend Nickname">
+                    <button>invite</button>
                 </div>
             </div>
         </div>
