--- a/being-match.html
+++ b/being-match.html
@@ -24,11 +24,11 @@
     <div class="games-page">
         <div class="game-template">
             <div class="board-template">
-                <h2 style="color: #5D1D88; font-size: 40px;"> choose game !</h2>
+                <h2 style="color: #5D1D88; font-size: 40px;"> 1v1 being matched... </h2>
                 <div class="board">
-                    <a href=""><img src="img/pong-img.jpg" alt="Pong Logo"></a>
-                    <a href="" class="question-mark"><img src="img/Vector.png" alt="question-mark"></a>
-                    <a href="" class="pong-logo-link"><img src="img/yazi-tura.jpg" alt="Pong Logo"></a>
+                    <a href=""><img src="img/1v1-profile-img.jpg" alt="Pong Logo"></a>
+                    <a href="" class="question-mark"><img src="img/sand-watch.jpg" alt="question-mark"></a>
+                    <a href="" class="pong-logo-link"><img src="img/waiting-box.jpg" alt="Pong Logo"></a>
                 </div>
             </div>
         </div>
