--- a/create-tour.html
+++ b/create-tour.html
@@ -24,11 +24,16 @@
     <div class="games-page">
         <div class="game-template">
             <div class="board-template">
-                <h2 style="color: #5D1D88; font-size: 40px;"> choose game !</h2>
+                <h2 style="color: #5D1D88; font-size: 35px;"> woww, that’ll be crazy TOURNAMENT!</h2>
                 <div class="board">
-                    <a href=""><img src="img/pong-img.jpg" alt="Pong Logo"></a>
-                    <a href="" class="question-mark"><img src="img/Vector.png" alt="question-mark"></a>
-                    <a href="" class="pong-logo-link"><img src="img/yazi-tura.jpg" alt="Pong Logo"></a>
+                    <a href=""> <img src="img/foursome.jpg"></a>
+                    <a href="" class="question-mark"><img src="img/eightsome.jpg" alt="question-mark"></a>
+                    <a href="" class="pong-logo-link"><img src="img/hexedecimal.jpg" alt="Pong Logo"></a>
+                </div>
+                <div class="nick-create">
+
+                    <input type="text" id="nickname" placeholder="Nickname">
+                    <button>Create</button>
                 </div>
             </div>
         </div>
