--- a/select-pong.html
+++ b/select-pong.html
@@ -24,11 +24,11 @@
     <div class="games-page">
         <div class="game-template">
             <div class="board-template">
-                <h2 style="color: #5D1D88; font-size: 40px;"> choose game !</h2>
+                <h2 style="color: #5D1D88; font-size: 40px;"> create or join</h2>
                 <div class="board">
-                    <a href=""><img src="img/pong-img.jpg" alt="Pong Logo"></a>
+                    <a href=""><img src="img/create-tour.jpg" alt="Pong Logo"></a>
                     <a href="" class="question-mark"><img src="img/Vector.png" alt="question-mark"></a>
-                    <a href="" class="pong-logo-link"><img src="img/yazi-tura.jpg" alt="Pong Logo"></a>
+                    <a href="" class="pong-logo-link"><img src="img/join-random-tour.jpg" alt="Pong Logo"></a>
                 </div>
             </div>
         </div>
