--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
                         <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
                         <button type="button" onclick="registerUser()">sign in</button>
                     </form>
-                    <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Hesabınız var mı? <a style="color: #FDB827;"  href="" onclick="loadPage('index.html'); return false;">LOG IN</a></p>
+                    <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Hesabınız var mı? <a style="color: #FDB827;"  href="" onclick="loadPage('index.html'); return false;">SIGN IN</a></p>
                 </div>
             </div>
         </div>
