denemek_icin_branchi

--- a/1v1match-winner-page.html
+++ b/1v1match-winner-page.html
@@ -15,6 +15,8 @@
                 	<img src="img/site-logo.png" alt="Site Logo" class="logo" width="49.17" height="37">
 					<div style="margin-right: 10px;"></div>
 					<img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
+					<img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
+					<img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
 				</div>
             </a>
             <a href=""onclick="loadPage('games.html'); return false;">
