small-profil-sola-alindi

--- a/tournament-tables.html
+++ b/tournament-tables.html
@@ -20,10 +20,8 @@
             <a href=""onclick="loadPage('games.html'); return false;">
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
             </a>
-            <a href="" onclick="loadPage('profile.html'); return false;">
-				<div style="margin-right: 80px;">
-                	<img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
-				</div>
+            <a style="margin-right: 2%;" href="" onclick="loadPage('profile.html'); return false;">
+                <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </a>
         </div>
     </navbar>
