added browser history v1.1.0

--- a/register.html
+++ b/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,10 +27,10 @@
                         <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
                         <button type="button" onclick="registerUser()">sign in</button>
                     </form>
-                    <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Hesabınız var mı? <a style="color: #FDB827;"  href="" onclick="loadPage('index.html'); return false;">SIGN IN</a></p>
+                    <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Hesabınız var mı? <a style="color: #FDB827;"  href="" onclick="loadPage('home.html'); return false;">SIGN IN</a></p>
                 </div>
             </div>
         </div>
     </div>
 </body>
-</html>
+</html> -->
