--- a/games.html
+++ b/games.html
@@ -27,7 +27,7 @@
                 <h2 style="color: #5D1D88; font-size: 40px;"> choose game !</h2>
                 <div class="board">
                     <a href=""><img src="img/pong-img.jpg" alt="Pong Logo"></a>
-                    <a href="" class="question-mark"><img src="img/Vector.png" alt="question-mark"></a>
+                    <a href="" class="question-mark"><img src="img/question-mark-new.png" alt="question-mark"></a>
                     <a href="" class="pong-logo-link"><img src="img/yazi-tura.jpg" alt="Pong Logo"></a>
                 </div>
             </div>
