--- a/index.html
+++ b/index.html
@@ -1,40 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="icon" type="img/jpg" href="img/pong-drawwing.jpg"/>
-    <script src="js/script.js"></script>
-    <title>4/2 Games</title>
-</head>
-<body>
-    <div class="index-body">
-        <div class="left-side">
-            <div class="content-left">
-                <img src="img/trancendence_logo_back.jpg" alt="">
-            </div>
-        </div>
-        <div class="right-side">
-            <div class="content">
-                <div class="input-container">
-                    <h1 style="color: #FDB827;">hello friend,</h1>
-                    <p style="color: #000">login to your account</p>
-                    <form id="loginUser" class="input-form-container"></form>
-                    <input type="text" id="username" placeholder="Username">
-                    <input type="password" id="password" placeholder="Password"> 
-                    <button type="button" onclick="loginUser()">Login</button>
-                    </form>
-                    <p style="color: #FDB827;"> or </p>
-                    <a href="img/42-account-logo.jpg" target="_blank">
-                        <img src="img/42-account-logo.jpg" alt="42-logo">
-                    </a>
-                    <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);"> Create a new user?
-                        <a style="color: #FDB827;" href="" onclick="loadPage('register.html'); return false;"> LOG IN</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
+<html lang="tr">
+    <head>
+        <meta charset="UTF-8">
+        <title>4/2 Games</title>
+        <link href="css/style.css" rel="stylesheet">
+        <link rel="icon" type="img/jpg" href="img/pong-drawwing.jpg"/>
+    </head>
+    <body>
+        <div id="navbar-container"></div>
+        <section id = "app"></section>
+            <script src="js/app.js" defer></script>
+    </body>
 </html>
