--- a/spa/pages/register.html
+++ b/spa/pages/register.html
@@ -10,11 +10,11 @@
                 <h1 style="color: #FDB827;">hello,</h1>
                 <p style="color: #000">create a new account</p>
                 <form id="registrationForm" class="input-form-container">
-                <input type="text" id="username" placeholder="Username" required>
-                <input type="email" id="email" placeholder="Email Address" required>
-                <input type="password" id="password" placeholder="Password" required>
-                <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
-                <button type="button" href="" onclick="event.preventDefault(); renderPage('home')">sign in</button>
+                    <input type="text" id="username" placeholder="Username" required>
+                    <input type="email" id="email" placeholder="Email Address" required>
+                    <input type="password" id="password" placeholder="Password" required>
+                    <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+                    <button type="button" onclick="registerUser()">sign in</button>
                 </form>
                 <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Hesabınız var mı? <a style="color: #FDB827;"  href="" onclick="event.preventDefault(); renderPage('/')">LOG IN</a></p>
             </div>
