--- a/spa/index.html
+++ b/spa/index.html
@@ -5,59 +5,9 @@
 	<title>4/2 Games</title>
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="icon" type="img/jpg" href="img/pong-drawwing.jpg"/>
-
 </head>
 <body>
-
-	
-
 </body>
-<script>
-	const routes = {
-		'/': {
-		template: '/pages/login.html',
-		view: null
-		},
-		'/being-match': {
-		template: '/pages/being-match.html',
-		view: null
-		},
-		'/create-tournament': {
-		template: '/pages/create-tournament.html',
-		view: null
-		},
-		'/join-tournament': {
-		template: '/pages/join-random-tournament.html',
-		view: null
-		},
-		'/games' : {
-			template: '/pages/games.html',
-			view: null
-		},
-		'/profile' : {
-			template: '/pages/profile.html',
-			view: null
-		},
-		'/settings' : {
-			template: '/pages/settings.html',
-			view: null
-		},
-		'/login': {
-		template: '/pages/login.html',
-		view: null
-		},
-		'/': {
-		template: '/pages/lorem.html',
-		view: null
-		},
-	
-		'/abouth': {
-		template: '/pages/about.html',
-		view: null
-		},
-}
-	
-</script>
-<script src="/ftjs/ft.js"></script>
-
+<script src="ftjs/ft.js"></script>
+<script src="ftjs/api.js"></script>
 </html>
