--- a/spa/pages/login.html
+++ b/spa/pages/login.html
@@ -12,7 +12,7 @@
                 <form id="loginUser" class="input-form-container"></form>
                     <input type="text" id="username" placeholder="Username">
                     <input type="password" id="password" placeholder="Password"> 
-                    <button type="button" href="/test">Login</button>
+                    <button type="button" href="loginUser()">Login</button>
                 </form>
                 <p style="color: #FDB827;"> or </p>
                 <a href="img/42-account-logo.jpg" target="_blank">
