--- a/spa/pages/games.html
+++ b/spa/pages/games.html
@@ -33,28 +33,37 @@
         <input style="border-radius: 20px; padding: 5%;" type="text" placeholder="@  Search..." class="search">
         <div class="scrollbox">
             <div class="scrollbox-inner">
-                <ul id="user-list"><span class="online-dot-online"></span>aoner</ul>
-                <ul id="user-list"><span class="online-dot-online"></span>buozdemi</ul>
-                <ul id="user-list"><span class="online-dot-online"></span>msenipek</ul>
-                <ul id="user-list"><span class="online-dot-online"></span>nkahrima</ul>
-                <ul id="user-list"><span class="online-dot-online"></span>ialgac</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>jennifer</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>michael</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>george</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>brad</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>leonardo</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>fred</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>denwill</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>mason</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>liam</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>sophie</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>emma</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>clooney</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>xavier</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>abraham</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>ilasic</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>paul</ul>
+                <ul id="user-list">
+
+                </ul>
             </div>
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<!-- Your custom JavaScript code -->
+<script>
+    // Assume usersData is the array of users received from your API
+    const usersData = [
+        { id: 1, username: "user1", is_online: true },
+        { id: 2, username: "user2", is_online: false },
+        // ... more user data
+    ];
+
+    // Function to dynamically render users in the HTML
+    function renderUsers(users) {
+        const userList = $("#user-list");
+        userList.empty(); // Clear previous user list
+
+        users.forEach(user => {
+            const onlineDotClass = user.is_online ? "online" : "offline";
+            const listItem = `<li><span class="online-dot-${onlineDotClass}"></span>${user.username}</li>`;
+            userList.append(listItem);
+        });
+    }
+
+    // Call the function to render users when the page loads
+    $(document).ready(function () {
+        renderUsers(usersData);
+    });
+</script>
