--- a/spa/pages/login.html
+++ b/spa/pages/login.html
@@ -12,14 +12,14 @@
                 <form id="loginUser" class="input-form-container"></form>
                     <input type="text" id="username" placeholder="Username">
                     <input type="password" id="password" placeholder="Password"> 
-                    <button type="button" onclick="loginUser()">Login</button>
+                    <button type="button"  onclick="loginUser()">Login</button>
                 </form>
                 <p style="color: #FDB827;"> or </p>
                 <a href="img/42-account-logo.jpg" target="_blank">
                 <img src="img/42-account-logo.jpg" alt="42-logo">
                 </a>
                 <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);"> Create a new user?
-                    <a style="color: #FDB827;" href="" onclick="event.preventDefault(); renderPage('register')"> SIGN IN</a>
+                    <a style="color: #FDB827;" href="" onclick="navigetTo('/register')"> SIGN IN</a>
                 </p>
             </div>
         </div>
