--- a/spa/pages/games.html
+++ b/spa/pages/games.html
@@ -32,38 +32,9 @@
         <h3> Add Friend </h3>
         <input style="border-radius: 20px; padding: 5%;" type="text" placeholder="@  Search..." class="search">
         <div class="scrollbox">
-            <div class="scrollbox-inner">
-                <ul id="user-list">
-
-                </ul>
+            <div class="scrollbox-inner" id="user-list-container">
+               
             </div>
         </div>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<!-- Your custom JavaScript code -->
-<script>
-    // Assume usersData is the array of users received from your API
-    const usersData = [
-        { id: 1, username: "user1", is_online: true },
-        { id: 2, username: "user2", is_online: false },
-        // ... more user data
-    ];
-
-    // Function to dynamically render users in the HTML
-    function renderUsers(users) {
-        const userList = $("#user-list");
-        userList.empty(); // Clear previous user list
-
-        users.forEach(user => {
-            const onlineDotClass = user.is_online ? "online" : "offline";
-            const listItem = `<li><span class="online-dot-${onlineDotClass}"></span>${user.username}</li>`;
-            userList.append(listItem);
-        });
-    }
-
-    // Call the function to render users when the page loads
-    $(document).ready(function () {
-        renderUsers(usersData);
-    });
-</script>
