login-register api setting okey

--- a/spa/pages/login.html
+++ b/spa/pages/login.html
@@ -19,7 +19,7 @@
                 <img src="img/42-account-logo.jpg" alt="42-logo">
                 </a>
                 <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);"> Create a new user?
-                    <a style="color: #FDB827;" href="" onclick="navigetTo('/register')"> SIGN IN</a>
+                    <a style="color: #FDB827;" href="/register" onclick="navigetTo('/register')"> SIGN IN</a>
                 </p>
             </div>
         </div>
