--- a/spa/pages/pong-time.html
+++ b/spa/pages/pong-time.html
@@ -22,7 +22,7 @@
         <div class="board-template">
             <h2 style="color: #5D1D88; font-size: 40px;"> create or join</h2>
             <div class="board">
-                <a href="" onclick="event.preventDefault(); renderPage('being-match')" ><img src="img/1v1-random.jpg" alt="Pong Logo"></a>
+                <a href="being-match" ><img src="img/1v1-random.jpg" alt="Pong Logo"></a>
                 <a href="" class="question-mark"><img src="img/question-mark-new.png" alt="question-mark"></a>
                 <a href="" onclick="event.preventDefault(); renderPage('tournament')" class="pong-logo-link"><img src="img/cup-tournament.jpg" alt="Pong Logo"></a>
             </div>
