--- a/spa/pages/profile.html
+++ b/spa/pages/profile.html
@@ -1,16 +1,16 @@
 <navbar class="navbar">
     <div class="navbar-container">
-        <a href="" onclick="event.preventDefault(); renderPage('games')">
+        <a href="games">
             <div style="display: flex; align-items: center; margin-left: 10px;">
                 <img src="img/site-logo.png" alt="Site Logo" class="logo" width="49.17" height="37">
                 <div style="margin-right: 10px;"></div>
                 <img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
             </div>
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('games')">
+        <a href="games">
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('profile')">
+        <a href="profile">
             <div style="margin-right: 80px;">
                 <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
@@ -20,9 +20,9 @@
 <div class="profile-page">
     <div class="users-board">
         <h3> Profile </h3>
+        <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="86" height="86">
         <div class="users-board-info">
             <p> Username: </p>
-            <p> Email: </p>
             <p> Password: </p>
         </div>
         <div class="users-board-buttons">
