--- a/spa/pages/login.html
+++ b/spa/pages/login.html
@@ -1,7 +1,58 @@
 <div class="index-body">
     <div class="left-side">
-        <div class="content-left">
-            <img src="img/trancendence_logo_back.jpg" alt="">
+        <div class="dual-container">
+			<div class="top-section">
+	            <img src="img/tracendence-big-logo.png" alt="Big Logo" width="577" height="804">
+			</div>
+			<div class="bottom-section">
+				<div class="main-write">
+					<p class="first-line">Welcome stranger,</p>
+					<p>there are 2 games on the site. One is a 1972 retro</p>
+					<p>pong game and the other is a coin toss game. The</p>
+					<p>project is the final project of Ecole 42 Istanbul</p>
+					<p>software school,</p>
+					<p>a website developed by </p>
+					<div class="inline-text">
+						<p class="person-line">
+							<span class="rounded-circle">
+								<a href="https://github.com/Sergey00s" target="_blank">
+									<img src="https://avatars.githubusercontent.com/Sergey00s" alt="GitHub Avatar" class="rounded-circle">
+								</a>
+							</span>  ialgac
+						</p>
+						<p class="person-line">
+							<span class="rounded-circle">
+								<a href="https://github.com/caglakahriman" target="_blank">
+									<img src="https://avatars.githubusercontent.com/caglakahriman" alt="GitHub Avatar" class="rounded-circle">
+								</a>
+							</span>  nkahrima
+						</p>	
+						<p class="person-line">
+							<span class="rounded-circle">
+								<a href="https:github.com/tahasenipek" target="_blank">
+									<img src="https://avatars.githubusercontent.com/tahasenipek" alt="GitHub Avatar" class="rounded-circle">
+								</a>
+							</span>  msenipek
+						</p>
+					</div>
+					<div class="inline-text">
+						<p class="person-line">
+							<span class="rounded-circle">
+								<a href="https://github.com/buozdemi" target="_blank">
+									<img src="https://avatars.githubusercontent.com/buozdemi" alt="GitHub Avatar" class="rounded-circle">
+								</a>
+							</span>  buozdemi
+						</p>
+						<p class="person-line">
+							<span class="rounded-circle">
+								<a href="https://github.com/aysuoner" target="_blank">
+									<img src="https://avatars.githubusercontent.com/aysuoner" alt="GitHub Avatar" class="rounded-circle">
+								</a>
+							</span>  aoner
+						</p>
+					</div>
+				</div>
+			</div>
         </div>
     </div>
     <div class="right-side">
