--- a/spa/index.html
+++ b/spa/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>4/2 Games</title>
-	<link href="css/style.css" rel="stylesheet">
-	<link rel="icon" type="img/jpg" href="img/pong-drawwing.jpg"/>
+    <meta charset="UTF-8">
+    <title>4/2 Games</title>
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" type="img/jpg" href="img/pong-drawwing.jpg"/>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+
+    <!-- Sayfa içeriği buraya gelecek -->
+
+	<script src="ftjs/ft.js"></script>
+	<script src="ftjs/api.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-<script src="ftjs/ft.js"></script>
-<script src="ftjs/api.js"></script>
 </html>
