--- a/spa/pages/pong-time.html
+++ b/spa/pages/pong-time.html
@@ -22,7 +22,7 @@
         <div class="board-template">
             <h2 style="color: #5D1D88; font-size: 40px;"> create or join</h2>
             <div class="board">
-                <a href="being-match" ><img src="img/1v1-random.jpg" alt="Pong Logo"></a>
+                <a href="" onclick="event.preventDefault(); renderPage('being-match')" ><img src="img/1v1-random.jpg" alt="Pong Logo"></a>
                 <a href="" class="question-mark"><img src="img/question-mark-new.png" alt="question-mark"></a>
                 <a href="" onclick="event.preventDefault(); renderPage('tournament')" class="pong-logo-link"><img src="img/cup-tournament.jpg" alt="Pong Logo"></a>
             </div>
@@ -32,8 +32,28 @@
         <h3> Add Friend </h3>
         <input style="border-radius: 20px; padding: 5%;" type="text" placeholder="@  Search..." class="search">
         <div class="scrollbox">
-            <div class="scrollbox-inner" id="user-list-container">
-               
+            <div class="scrollbox-inner">
+                <ul id="user-list"><span class="online-dot-online"></span>aoner</ul>
+                <ul id="user-list"><span class="online-dot-online"></span>buozdemi</ul>
+                <ul id="user-list"><span class="online-dot-online"></span>msenipek</ul>
+                <ul id="user-list"><span class="online-dot-online"></span>nkahrima</ul>
+                <ul id="user-list"><span class="online-dot-online"></span>ialgac</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>jennifer</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>michael</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>george</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>brad</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>leonardo</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>fred</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>denwill</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>mason</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>liam</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>sophie</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>emma</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>clooney</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>xavier</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>abraham</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>ilasic</ul>
+                <ul id="user-list"><span class="online-dot-offline"></span>paul</ul>
             </div>
         </div>
     </div>
