--- a/spa/pages/create-tournament.html
+++ b/spa/pages/create-tournament.html
@@ -24,10 +24,10 @@
             <div class="board">
                 <a href="" class="pong-logo-link"><img src="img/tournament-graph.png" alt="tournament-graph"></a>
             </div>
-            <div class="nick-create">
-                <input type="text" id="nickname" placeholder="Nickname">
-                <button>Create</button>
-            </div>
+			<div class="left-right" id="sadecebu">
+				<input type="text" id="nickname" placeholder="Nickname">
+				<button>Create</button>
+			</div>
         </div>
     </div>
 	<div class="up-user-board">
