--- a/spa/pages/join-random-tournament.html
+++ b/spa/pages/join-random-tournament.html
@@ -11,7 +11,7 @@
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
         <a href="" onclick="event.preventDefault(); renderPage('profile')">
-            <div style="margin-right: 80px;">
+            <div style="margin-right: 20px;">
                 <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
         </a>
@@ -31,33 +31,35 @@
             </div>
         </div>
     </div>
-    <div class="users-board">
-        <h3> Add Friend </h3>
-        <input style="border-radius: 20px; padding: 5%;" type="text" placeholder="@  Search..." class="search">
-        <div class="scrollbox">
-            <div class="scrollbox-inner">
-                <ul id="user-list"><span class="online-dot-online"></span>aoner</ul>
-                <ul id="user-list"><span class="online-dot-online"></span>buozdemi</ul>
-                <ul id="user-list"><span class="online-dot-online"></span>msenipek</ul>
-                <ul id="user-list"><span class="online-dot-online"></span>nkahrima</ul>
-                <ul id="user-list"><span class="online-dot-online"></span>ialgac</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>jennifer</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>michael</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>george</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>brad</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>leonardo</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>fred</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>denwill</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>mason</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>liam</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>sophie</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>emma</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>clooney</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>xavier</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>abraham</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>ilasic</ul>
-                <ul id="user-list"><span class="online-dot-offline"></span>paul</ul>
-            </div>
-        </div>
-    </div>
+	<div class="up-user-board">
+		<div class="users-board">
+			<h3> Add Friend </h3>
+			<input style="border-radius: 20px; padding: 3%;" type="text" placeholder="@  Search..." class="search">
+			<div class="scrollbox">
+				<div class="scrollbox-inner">
+					<ul id="user-list"><span class="online-dot-online"></span>aoner</ul>
+					<ul id="user-list"><span class="online-dot-online"></span>buozdemi</ul>
+					<ul id="user-list"><span class="online-dot-online"></span>msenipek</ul>
+					<ul id="user-list"><span class="online-dot-online"></span>nkahrima</ul>
+					<ul id="user-list"><span class="online-dot-online"></span>ialgac</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>jennifer</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>michael</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>george</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>brad</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>leonardo</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>fred</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>denwill</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>mason</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>liam</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>sophie</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>emma</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>clooney</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>xavier</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>abraham</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>ilasic</ul>
+					<ul id="user-list"><span class="online-dot-offline"></span>paul</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
