--- a/spa/pages/login.html
+++ b/spa/pages/login.html
@@ -6,7 +6,7 @@
 			</div>
 			<div class="bottom-section">
 				<div class="main-write">
-					<p class="first-line">Welcome stranger,</p>
+					<p class="first-line">Welcome back,</p>
 					<p>there are 2 games on the site. One is a 1972 retro</p>
 					<p>pong game and the other is a coin toss game. The</p>
 					<p>project is the final project of Ecole 42 Istanbul</p>
@@ -66,8 +66,8 @@
                     <button type="button"  onclick="loginUser()">Login</button>
                 </form>
                 <p style="color: #FDB827;"> or </p>
-                <a href="img/42-account-logo.jpg" target="_blank">
-                <img src="img/42-account-logo.jpg" alt="42-logo">
+                <a href="img/42account.png" target="_blank" >
+                <img src="img/42account.png" alt="42-logo" width="174" height="76">
                 </a>
                 <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);"> Create a new user?
                     <a style="color: #FDB827;" href="" onclick="navigetTo('/register')"> SIGN IN</a>
