--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -11,17 +11,18 @@
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
         <a href="" onclick="event.preventDefault(); renderPage('profile')">
-            <div style="margin-right: 80px;">
+            <div style="margin-right: 20px;">
                 <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
         </a>
     </div>
 </navbar>
 
-    <div class="users-board">
-        profile card
+<div class="profile-design">
+	<div class="users-board">
+		profile card
 			<div class="card">
-				<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/1/18/Mark_Zuckerberg_F8_2019_Keynote_%2832830578717%29_%28cropped%29.jpg" alt="Card image cap">
+				<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/1/18/Mark_Zuckerberg_F8_2019_Keynote_%2832830578717%29_%28cropped%29.jpg" alt="Card image cap" width="203" height="240">
 					<div class="card-body">
 						<p class="profil-online"><span class="online-dot-online"></span>online</p>
 						<h6 class="card-title">zuckerberg</h6>
@@ -35,90 +36,93 @@
 							<p>friends :</p>
 						</div>
 					</div>
-			  </div>
+			</div>
 <!--         <div class="users-board-buttons">
-            <button class="users-board-button" href="" onclick="event.preventDefault(); renderPage('settings')"> Edit Profile </button>
-            <button class="users-board-button" > Delete Profile </button>
-        </div> -->
-    </div>
-	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-		<div class="carousel-inner">
-		  <div class="carousel-item active">
-			<table class="table table-dark">
-				<thead>
-				  <tr>
-					<th scope="col">#</th>
-					<th scope="col">First</th>
-					<th scope="col">Last</th>
-					<th scope="col">Handle</th>
-				  </tr>
-				</thead>
-				<tbody>
-				  <tr>
-					<th scope="row">1</th>
-					<td>Mark</td>
-					<td>Otto</td>
-					<td>@mdo</td>
-				  </tr>
-				  <tr>
-					<th scope="row">2</th>
-					<td>Jacob</td>
-					<td>Thornton</td>
-					<td>@fat</td>
-				  </tr>
-				  <tr>
-					<th scope="row">3</th>
-					<td>Larry</td>
-					<td>the Bird</td>
-					<td>@twitter</td>
-				  </tr>
-				</tbody>
-			  </table>
-		  </div>
-		  <div class="carousel-item">
-			<table class="table">
-				<thead>
-				  <tr>
-					<th scope="col">#</th>
-					<th scope="col">First</th>
-					<th scope="col">Last</th>
-					<th scope="col">Handle</th>
-				  </tr>
-				</thead>
-				<tbody>
-				  <tr>
-					<th scope="row">1</th>
-					<td>Mark</td>
-					<td>Otto</td>
-					<td>@mdo</td>
-				  </tr>
-				  <tr>
-					<th scope="row">2</th>
-					<td>Jacob</td>
-					<td>Thornton</td>
-					<td>@fat</td>
-				  </tr>
-				  <tr>
-					<th scope="row">3</th>
-					<td>Larry</td>
-					<td>the Bird</td>
-					<td>@twitter</td>
-				  </tr>
-				</tbody>
-			  </table>
-		  </div>
-		  <div class="carousel-item">
-			<img src="..." class="d-block w-100" alt="...">
-		  </div>
+			<button class="users-board-button" href="" onclick="event.preventDefault(); renderPage('settings')"> Edit Profile </button>
+			<button class="users-board-button" > Delete Profile </button>
+		</div> -->
+	</div>
+	<div class=".statistics-row">
+		<div class="board">
+			<div class="board-column">
+				<head>
+					<title>Pong Game</title>
+				</head>
+				<style>
+					* {
+						margin: 0;
+						padding: 0;
+						box-sizing: border-box;
+					}
+					body {
+						display: flex;
+						justify-content: center;
+						background: #5D1D88;
+						background-size: cover;
+					}
+					#container {
+						margin: auto;
+						margin-top: 10%;
+						border-radius: 20px;
+						color: white;
+						padding: 20px;
+						background: rgba(0, 0, 0, 0.5);
+					}
+					table {
+						border-collapse: collapse;
+					}
+					tr {
+						border-bottom: 1px solid white;
+						height: 50px;
+						padding: 0 25px;
+					}
+					th {
+						width: 120px;
+					}
+					h1 {
+						text-align: center;
+					}
+				</style>
+				<body>
+					<div id="container">
+						<table>
+							<tr>
+								<th id="Date"></th>
+								<th id="user1"></th>
+								<th id="user2"></th>
+								<th id="score"></th>
+							</tr>
+							<tr>
+								<th id="16.04.2023"></th>
+								<td id="mark"></td>
+								<td id="jones"></td>
+								<td id="5-1"></td>
+							</tr>
+							<tr>
+								<th id="22.06.2023"></th>
+								<td id="mark"></td>
+								<td id="leonardo"></td>
+								<td id="2-3"></td>
+							</tr><tr>
+								<th id="16.04.2023"></th>
+								<td id="jones"></td>
+								<td id="mark"></td>
+								<td id="1-3"></td>
+							</tr><tr>
+								<th id="30.07.2023"></th>
+								<td id="elon"></td>
+								<td id="mark"></td>
+								<td id="5-3"></td>
+							</tr><tr>
+								<th id="22.11.2023"></th>
+								<td id="mark"></td>
+								<td id="neo"></td>
+								<td id="6-5"></td>
+							</tr>
+						</table>
+					</div>
+				</body>
+			</div>
 		</div>
-		<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		  <span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		  <span class="sr-only">Next</span>
-		</a>
-	  </div>
-
-
+	</div>
+</div>
