api register ok

--- a/spa/pages/register.html
+++ b/spa/pages/register.html
@@ -62,12 +62,11 @@
                 <p style="color: #000">create a new account</p>
                 <form id="registrationForm" class="input-form-container">
                     <input type="text" id="username" placeholder="Username" required>
-                    <input type="email" id="email" placeholder="Email Address" required>
                     <input type="password" id="password" placeholder="Password" required>
                     <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
                     <button type="button" onclick="registerUser()">sign in</button>
                 </form>
-                <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Already a member? <a style="color: #FDB827;"  href="" onclick="event.preventDefault(); renderPage('/')">LOG IN</a></p>
+                <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Already a member? <a style="color: #FDB827;"  href="/login">LOG IN</a></p>
             </div>
         </div>
     </div>
