--- a/spa/pages/login.html
+++ b/spa/pages/login.html
@@ -61,8 +61,8 @@
                 <h1 style="color: #FDB827;">hello friend,</h1>
                 <p style="color: #000">login to your account</p>
                 <form id="loginUser" class="input-form-container"></form>
-                    <input type="text" id="username" placeholder="Username">
-                    <input type="password" id="password" placeholder="Password"> 
+                    <input type="text" id="username" placeholder="Username" required>
+                    <input type="password" id="password" placeholder="Password" required> 
                     <button type="button"  onclick="loginUser()">Login</button>
                 </form>
                 <p style="color: #FDB827;"> or </p>
@@ -70,11 +70,9 @@
                 <img src="img/42account.png" alt="42-logo" width="174" height="76">
                 </a>
                 <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);"> Create a new user?
-                    <a style="color: #FDB827;" href="" onclick="navigetTo('/register')"> SIGN IN</a>
+                    <a style="color: #FDB827;" href="/register"> SIGN IN</a>
                 </p>
             </div>
         </div>
     </div>
 </div>
-
-<!-- awf -->
