--- a/spa/pages/tournament.html
+++ b/spa/pages/tournament.html
@@ -23,7 +23,7 @@
 			<h2 style="color: #5D1D88; font-size: 40px;"> create or join</h2>
 			<div class="board">
 				<div class="touch-box">
-					<a href="" onclick="event.preventDefault(); renderPage('create-tournament')">
+					<a href="create-tournament">
 						<img src="img/create-tournament.png" alt="create-tournament" style="width: 126px; height: 184px;">
 					</a>
 				</div>
@@ -39,30 +39,10 @@
     <div class="up-user-board">
 		<div class="users-board">
 			<h3> Add Friend </h3>
-			<input style="border-radius: 20px; padding: 3%;" type="text" placeholder="@  Search..." class="search">
+			<input style="border-radius: 20px; padding: 5%;" type="text" placeholder="@  Search..." class="search" oninput="searchUsers();">
 			<div class="scrollbox">
-				<div class="scrollbox-inner">
-					<ul id="user-list"><span class="online-dot-online"></span>aoner</ul>
-					<ul id="user-list"><span class="online-dot-online"></span>buozdemi</ul>
-					<ul id="user-list"><span class="online-dot-online"></span>msenipek</ul>
-					<ul id="user-list"><span class="online-dot-online"></span>nkahrima</ul>
-					<ul id="user-list"><span class="online-dot-online"></span>ialgac</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>jennifer</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>michael</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>george</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>brad</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>leonardo</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>fred</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>denwill</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>mason</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>liam</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>sophie</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>emma</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>clooney</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>xavier</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>abraham</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>ilasic</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>paul</ul>
+				<div class="scrollbox-inner" id="user-list-container">
+
 				</div>
 			</div>
 		</div>
