user list modified

--- a/spa/pages/head_tail.html
+++ b/spa/pages/head_tail.html
@@ -1,17 +1,17 @@
 <navbar class="navbar">
     <div class="navbar-container">
-        <a href="" onclick="event.preventDefault(); renderPage('games')">
+        <a href="games">
             <div style="display: flex; align-items: center; margin-left: 10px;">
                 <img src="img/site-logo.png" alt="Site Logo" class="logo" width="49.17" height="37">
                 <div style="margin-right: 10px;"></div>
                 <img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
             </div>
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('games')">
+        <a href="games">
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('profile')">
-            <div style="margin-right: 80px;">
+        <a href="my-profile">
+            <div style="margin-right: 20px;">
                 <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
         </a>
