--- a/spa/pages/pong-time.html
+++ b/spa/pages/pong-time.html
@@ -7,10 +7,10 @@
                 <img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
             </div>
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('games')">
+        <a href="games">
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('profile')">
+        <a href="my-profile">
             <div style="margin-right: 20px;">
                 <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
