--- a/spa/pages/tournament-lost-page.html
+++ b/spa/pages/tournament-lost-page.html
@@ -1,16 +1,16 @@
 <navbar class="navbar">
     <div class="navbar-container">
-        <a href="" onclick="event.preventDefault(); renderPage('games')">
+        <a href="games">
             <div style="display: flex; align-items: center; margin-left: 10px;">
                 <img src="img/site-logo.png" alt="Site Logo" class="logo" width="49.17" height="37">
                 <div style="margin-right: 10px;"></div>
                 <img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
             </div>
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('games')">
+        <a href="games">
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('profile')">
+        <a href="my-profile">
             <div style="margin-right: 20px;">
                 <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
@@ -35,30 +35,10 @@
 	<div class="up-user-board">
 		<div class="users-board">
 			<h3> Add Friend </h3>
-			<input style="border-radius: 20px; padding: 3%;" type="text" placeholder="@  Search..." class="search">
+			<input style="border-radius: 20px; padding: 5%;" type="text" placeholder="@  Search..." class="search" oninput="searchUsers();">
 			<div class="scrollbox">
-				<div class="scrollbox-inner">
-					<ul id="user-list"><span class="online-dot-online"></span>aoner</ul>
-					<ul id="user-list"><span class="online-dot-online"></span>buozdemi</ul>
-					<ul id="user-list"><span class="online-dot-online"></span>msenipek</ul>
-					<ul id="user-list"><span class="online-dot-online"></span>nkahrima</ul>
-					<ul id="user-list"><span class="online-dot-online"></span>ialgac</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>jennifer</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>michael</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>george</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>brad</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>leonardo</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>fred</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>denwill</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>mason</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>liam</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>sophie</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>emma</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>clooney</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>xavier</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>abraham</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>ilasic</ul>
-					<ul id="user-list"><span class="online-dot-offline"></span>paul</ul>
+				<div class="scrollbox-inner" id="user-list-container">
+
 				</div>
 			</div>
 		</div>
