--- a/spa/pages/tournament.html
+++ b/spa/pages/tournament.html
@@ -1,16 +1,16 @@
 <navbar class="navbar">
     <div class="navbar-container">
-        <a href="" onclick="event.preventDefault(); renderPage('games')">
+        <a href="games">
             <div style="display: flex; align-items: center; margin-left: 10px;">
                 <img src="img/site-logo.png" alt="Site Logo" class="logo" width="49.17" height="37">
                 <div style="margin-right: 10px;"></div>
                 <img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
             </div>
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('games')">
+        <a href="games">
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
-        <a href="" onclick="event.preventDefault(); renderPage('profile')">
+        <a href="my-profile">
             <div style="margin-right: 20px;">
                 <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
@@ -29,7 +29,7 @@
 				</div>
 				<a href="" style="cursor: default;" class="question-mark"><img src="img/question-mark-new.png" alt="question-mark"></a>
 				<div class="touch-box">
-					<a href="" onclick="event.preventDefault(); renderPage('join-random-tournament')" class="join-random-tournament">
+					<a href="alone-tournament" class="join-random-tournament">
 						<img src="img/join-random-tournament.png" alt="join-random-tournament" style="width: 137px; height: 181px;">
 					</a>
 				</div>
